# fibonacci

./: Cargo.toml  README.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
benches/: fibonacci.rs
examples/: simple_output.rs
src/: lib.rs  test.rs
