[package]
name = "fibonacci"
edition = "2018"
version = "0.1.2"
authors = ["Kyle Clemens <fibonacci-rs@kyleclemens.com>"]
description = "A generic Fibonacci sequence generator"
license = "MPL-2.0"
documentation = "https://docs.rs/fibonacci"
repository = "https://github.com/jkcclemens/fibonacci"

[dependencies]
num = "0.3.1"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "fibonacci"
harness = false